--- a/front/src/components/DashBoard.module.css
+++ b/front/src/components/DashBoard.module.css
@@ -4,6 +4,7 @@
     margin-top: 30px;
     height: 100vh;
 }
+
 .content {
     flex-grow: 1;
     display: flex;
@@ -41,6 +42,7 @@
     height: 280px;
     object-fit: cover;
 }
+
 footer {
     display: flex;
     justify-content: center;
@@ -48,8 +50,8 @@ footer {
     margin-bottom: 10px;
 }
 
-.qqqq{
-    background-color: #D9D9D9;
+.qqqq {
+    background-color: #dadada;
     min-width: 150px;
     width: 180px;
     height: 100px;
@@ -57,12 +59,14 @@ footer {
     justify-content: center;
     align-items: center;
 }
+
 .cardImage {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 8px;
 }
+
 .scrollContainer {
     margin-left: -9px;
     display: flex;
@@ -79,7 +83,7 @@ footer {
 }
 
 .scrollContainer::-webkit-scrollbar-track {
-    background: #D9D9D9;
+    background: #f3f3f3;
 }
 
 .scrollContainer::-webkit-scrollbar-thumb {
@@ -89,14 +93,14 @@ footer {
     padding: 2px;
 }
 
-#cadastrosd{
+#cadastrosd {
     color: rgb(102, 105, 124);
     position: relative;
     right: 438px;
     top: 30px;
 }
 
-.qazul{
+.qazul {
     font-family: "Poppins", sans-serif;
     display: flex;
     justify-content: center;
@@ -108,14 +112,16 @@ footer {
     color: #fff;
     background-color: #8C52FF;
 }
-.cadss{
+
+.cadss {
     position: relative;
     top: 37px;
     right: 1px;
     display: flex;
     gap: 83px;
 }
-#cad{
+
+#cad {
     font-family: "Poppins", sans-serif;
     display: flex;
     justify-content: center;
@@ -124,10 +130,11 @@ footer {
     border-radius: 8px;
     width: 180px;
     height: 45px;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-.qbranco{
+
+.qbranco {
     position: relative;
     top: 39px;
     right: 1px;
@@ -150,11 +157,126 @@ body::-webkit-scrollbar-thumb {
     border: 3px solid #D9D9D9;
     padding: 2px;
 }
+
 :root {
     --cor-principal: #8C52FF;
     --branco: #fff;
-    --cinza-claro: #F0F0F0;
+    --cinza-claro: #f0f0f0;
     --cinza-escuro: #8A8C98;
     --preto: #000;
-    background-color: #FFF;
+    background-color: #ffffff;
+}
+
+@media (max-width: 1200px) {
+    .content {
+        margin-left: 200px;
+        width: 80%;
+    }
+
+    .ola {
+        right: 200px;
+    }
+
+    #cadastrosd {
+        right: 300px;
+    }
+}
+
+@media (max-width: 992px) {
+    .content {
+        margin-left: 150px;
+        width: 85%;
+    }
+
+    .ola {
+        font-size: 26px;
+        right: 150px;
+    }
+
+    #cadastrosd {
+        right: 200px;
+    }
+}
+
+@media (max-width: 768px) {
+    .content {
+        margin-left: 50px;
+        width: 90%;
+    }
+
+    .ola {
+        font-size: 24px;
+        right: 100px;
+    }
+
+    .cadss, .qbranco {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+
+    #cadastrosd {
+        right: 100px;
+    }
+
+    .qazul, #cad {
+        width: 100%;
+    }
+}
+
+@media (max-width: 576px) {
+    .sliderContainer {
+        display: none;
+    }
+    .content {
+        margin-left: 0;
+        width: 100%;
+        padding: 0 10px;
+    }
+
+    .ola {
+        font-size: 29px;
+        right: 0;
+        margin-left: 0;
+        text-align: start;
+        top: 29px;
+    }
+
+    #cadastrosd {
+        position: static;
+        text-align: center;
+    }
+
+    .cadss, .qbranco {
+        flex-direction: row;
+        align-items: center;
+        gap: 10px;
+        right: 21px;
+        font-size: 10px;
+        width: 291px;
+    }
+
+    .qazul, #cad {
+        width: 100%;
+    }
+
+    .scrollContainer {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .slideImage {
+        max-width: 100%;
+        height: 150px; /* Ajuste a altura conforme necessário */
+        object-fit: fill;
+    }
+
+    .cardImage {
+        width: 100%;
+        height: 80px; /* Ajuste a altura conforme desejado */
+        object-fit: contain; /* Alterado de 'cover' para 'contain' */
+    }
+    .ImgzinhaFooter{
+        width: 23px;
+    }
 }
