--- a/front/src/components/NavBarPerfil.module.css
+++ b/front/src/components/NavBarPerfil.module.css
@@ -107,7 +107,7 @@
     border: none;
     background-color: var(--cor-principal);
     border-radius: 15px;
-    width: 300px;
+    width: 250px;
     justify-content: center;
     color: var(--branco);
     font-size: 20px;
@@ -156,22 +156,22 @@
 
 .prograList {
     margin-top: 15px;
-    height: 220px;
+    height: 190px;
     overflow: auto;
 }
 
 .prograDiv {
     display: flex;
-    width: 100%;
+    width: 260px;
 }
 
 .prograItemImage {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
-    border-radius: 10px;
-    box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.30);
-    margin-left: 5px;
+    /*border-radius: 10px;*/
+    /*box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.30);*/
+    /*margin-left: 5px;*/
 }
 
 .prograItem {
@@ -207,28 +207,8 @@
     font-weight: bold;
 }
 
-.botaoMenuPerfil {
-    display: none;
-}
-
-@media(max-width: 1024px){
-
-}
-
 @media(max-width: 770px) {
     .prograList {
         height: 220px;
-    }
-
-    .principal {
-        right: -400px;
-    }
-
-    .botaoMenuPerfil{
-        display: block;
-        position: absolute;
-        z-index: 99;
-        top: 0;
-        right: 0;
     }
 }
