--- a/front/src/index.css
+++ b/front/src/index.css
@@ -45,8 +45,82 @@ code {
   color: #000;
 }
 
-.fc .fc-view-harness {
+.fc .fc-view-harness, .fc .fc-button-group  {
   position: sticky;
+}
+
+@media (max-width: 630px) {
+  .fc .fc-toolbar-title {
+    font-size: 20px;
+  }
+
+  .fc-direction-ltr .fc-button-group > .fc-button:not(:last-child),
+  .fc-direction-ltr .fc-button-group > .fc-button:not(:first-child),
+  .fc-direction-ltr .fc-toolbar > * > :not(:first-child){
+    width: 45px;
+    font-size: 13px;
+  }
+
+  .fc-theme-standard th {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 530px) {
+  .fc .fc-toolbar-title {
+    font-size: 20px;
+  }
+
+  .fc-direction-ltr .fc-button-group > .fc-button:not(:last-child),
+  .fc-direction-ltr .fc-button-group > .fc-button:not(:first-child),
+  .fc-direction-ltr .fc-toolbar > * > :not(:first-child){
+    width: 35px;
+    font-size: 10px;
+  }
+
+  .fc-theme-standard th, .fc .fc-view-harness {
+    font-size: 12px;
+  }
+}
+
+@media(max-width: 426px) {
+  .fc .fc-toolbar {
+    display: flex;
+    align-items: center;
+    flex-direction: column-reverse;
+    gap: 8px;
+  }
+
+  .fc-theme-standard th, .fc .fc-view-harness {
+    font-size: 10px;
+  }
+
+  .fc .fc-daygrid-body-natural, .fc .fc-daygrid-body-unbalanced .fc-daygrid-day-events {
+    margin-bottom: 0;
+    min-height: 12px;
+  }
+}
+
+@media(max-width: 323px) {
+  .fc .fc-toolbar {
+    display: flex;
+    align-items: center;
+    flex-direction: column-reverse;
+    gap: 5px;
+  }
+
+  .fc .fc-toolbar.fc-header-toolbar {
+    margin-bottom: 15px;
+  }
+
+  .fc-theme-standard th, .fc .fc-view-harness {
+    font-size: 10px;
+  }
+
+  .fc .fc-daygrid-body-natural, .fc .fc-daygrid-body-unbalanced .fc-daygrid-day-events {
+    margin-bottom: 0;
+    min-height: 12px;
+  }
 }
 
 /*=================================*/
