--- a/front/src/components/DashBoard.module.css
+++ b/front/src/components/DashBoard.module.css
@@ -4,7 +4,14 @@
     margin-top: 30px;
     height: 100vh;
 }
-
+.ImgzinhaFooter{
+    width: 212px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    top: 83px;
+}
 .content {
     flex-grow: 1;
     display: flex;
@@ -277,6 +284,11 @@ body::-webkit-scrollbar-thumb {
         object-fit: contain; /* Alterado de 'cover' para 'contain' */
     }
     .ImgzinhaFooter{
-        width: 23px;
+        width: 126px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        top: 51px;
     }
 }
