--- a/front/src/components/Calendario.module.css
+++ b/front/src/components/Calendario.module.css
@@ -132,9 +132,9 @@
 }
 
 .holidayImagePonto {
-    width: 25px;
-    height: 25px;
-    background-color: var(--cor-principal);
+    width: 20px;
+    height: 20px;
+    background-color: #FEBE00;
     padding: 6px;
     border-radius: 20px;
     box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.40);
@@ -143,6 +143,7 @@
 .ImagePontoBotao {
     border: none;
     background-color: #fff;
+    display: flex;
 }
 
 .ImagePontoBotao:hover {
