--- a/front/src/components/DashBoard.module.css
+++ b/front/src/components/DashBoard.module.css
@@ -165,6 +165,13 @@ body::-webkit-scrollbar-thumb {
     padding: 2px;
 }
 
+.h2Curso {
+    color: rgb(102, 105, 124);
+    position: relative;
+    right: 456px;
+    top: 28px;
+}
+
 :root {
     --cor-principal: #8C52FF;
     --branco: #fff;
@@ -173,26 +180,60 @@ body::-webkit-scrollbar-thumb {
     --preto: #000;
     background-color: #ffffff;
 }
-@media (min-width: 400px) {
-    .content {
-        margin-left: 0;
+
+@media(max-width: 1025px) {
+    .ola{
+        right: 174px;
+    }
+
+    .slideImage{
+        height: 224px;
+        width: 95%;
+    }
+
+    .h2Curso{
+        right: 358px;
+    }
+
+    #cadastrosd{
+        right: 0px;
+    }
+
+    .cadss, .qbranco{
+        gap: 20px;
+    }
+
+    #cad, .qazul{
+        width: 150px;
+    }
+}
+
+@media(max-width: 769px) {
+    .content{
+        margin-left: 60px;
         width: 100%;
-        padding: 0 10px;
     }
 
     .ola {
+        font-size: 26px;
+        right: 200px;
+    }
+
+
+}
+
+
+
+
+
+
+@media (max-width: 400px) {
+    .ola {
         font-size: 29px;
-        right: 0;
         margin-left: 0;
         text-align: start;
         top: 17px;
         margin-bottom: 10px;
-    }
-
-    #cadastrosd {
-        position: static;
-        text-align: center;
-        margin-bottom: -15px;
     }
 
     .cadss, .qbranco {
@@ -235,11 +276,25 @@ body::-webkit-scrollbar-thumb {
         top: 60px;
     }
 }
+
+@media (max-width: 992px) {
+
+
+
+
+    /*#cadastrosd {*/
+    /*    right: 200px;*/
+
+    /*}*/
+}
+
+
 @media (max-width: 360px) {
     .sliderContainer {
         display: none;
     }
     .content {
+
         margin-left: 0;
         width: 100%;
         padding: 0 10px;
@@ -272,6 +327,10 @@ body::-webkit-scrollbar-thumb {
         width: 100%;
     }
 
+    #cadastrosd {
+        right: 100px;
+    }
+
     .scrollContainer {
         width: 100%;
         margin-left: 0;
@@ -286,6 +345,7 @@ body::-webkit-scrollbar-thumb {
         top: 60px;
     }
 }
+
 @media (max-width: 320px) {
     .sliderContainer {
         display: none;
