--- a/front/src/components/Calendario.module.css
+++ b/front/src/components/Calendario.module.css
@@ -39,7 +39,7 @@
 .calendario {
     padding: 20px;
     margin-left: 245px;
-    background-color: #F0F0F0;
+    background-color: #fff;
 }
 
 .tituloCale {
@@ -132,12 +132,11 @@
 }
 
 .holidayImagePonto {
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     background-color: #FEBE00;
     padding: 6px;
     border-radius: 20px;
-    box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.40);
 }
 
 .ImagePontoBotao {
@@ -186,7 +185,7 @@
     }
 
     .calendarContainer {
-        width: 500px;
+        width: 600px;
     }
 
     .holidayList {
@@ -216,7 +215,7 @@
     }
 
     .calendarContainer {
-        width: 250px;
+        width: 300px;
     }
 
     .tituloHoliday, .tituloHolidayH2 {
@@ -234,6 +233,13 @@
 
     .holiday, .holidayData {
         font-size: 14px;
+    }
+}
+
+
+@media(max-width: 376px) {
+    .calendarContainer {
+        width: 250px;
     }
 }
 
