--- a/front/src/components/Dropdown.module.css
+++ b/front/src/components/Dropdown.module.css
@@ -115,7 +115,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #8C52FF;
+    background: #FEBE00;
     border-radius: 50%;
     width: 30px;
     height: 30px;
@@ -126,6 +126,7 @@
     cursor: pointer;
     border: none;
 }
+
 .deleteButton {
     background: none;
     border: none;
