--- a/front/src/components/CadastroAlunos.module.css
+++ b/front/src/components/CadastroAlunos.module.css
@@ -55,7 +55,8 @@
     }
 
     .divdireita, .divesquerda{
-        padding: 10px;
+        padding: 4px;
+        gap: 0;
     }
 
     .divesquerda img{
