--- a/front/src/components/CadastroSalas.module.css
+++ b/front/src/components/CadastroSalas.module.css
@@ -54,7 +54,8 @@
     }
 
     .divdireita, .divesquerda {
-        padding: 10px; /* Reduz o padding em telas menores */
+        padding: 4px; /* Reduz o padding em telas menores */
+        gap: 0;
     }
 
     .divesquerda img {
