--- a/front/src/components/ListaProfessores.module.css
+++ b/front/src/components/ListaProfessores.module.css
@@ -13,5 +13,17 @@
 body {
     overflow-x: hidden;
 }
+@media (max-width: 480px){
+    .title{
+        left: 15px;
+    }
+}
+
+@media(max-width: 320px) {
+    .title{
+        font-size: 25px;
+    }
+
+}
 
 
