--- a/front/src/components/Dropdown.module.css
+++ b/front/src/components/Dropdown.module.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap');
 
 .container {
     display: flex;
@@ -50,13 +50,13 @@
     justify-content: center;
     align-items: center;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     min-width: 160px;
     font-family: "Poppins", sans-serif;
     letter-spacing: 1px;
     background-color: #8C52FF;
     box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1);
-    z-index: 1;
+    z-index: 0;
 }
 .cardContainer {
     margin-left: -44px;
@@ -68,6 +68,16 @@
     flex-direction: row;
     justify-content: flex-start;
     gap: 20px;
+    flex-wrap: wrap;
+}
+.cardizin {
+    background-color: #fff;
+    border-radius: 10px;
+    margin: 10px;
+    padding: 10px;
+    height: 290px;
+    width: calc(50% - -115px); /* Ajuste a largura para 50% menos a margem */
+    box-sizing: border-box;
 }
 #email{
     font-family: "Poppins", sans-serif;
@@ -91,13 +101,6 @@
     font-weight: bold;
     font-size: 13px;
 }
-.cardizin{
-    background-color: #fff;
-    border-radius: 10px;
-    margin: 10px;
-    padding: 10px;
-    height: 263px;
-}
 .addButton{
     background-color: #8C52FF;
     width: 180px;
@@ -106,7 +109,7 @@
     color: #fff;
     border-radius: 5px;
     position: relative;
-    top: -14px;
+    top: -8px;
     left: 22px;
     font-family: "Poppins", sans-serif;
     font-weight: 500;
@@ -128,6 +131,8 @@
 }
 
 .deleteButton {
+    position: relative;
+    top: 5px;
     background: none;
     border: none;
     color: red;
@@ -220,4 +225,140 @@
 
 .show {
     max-height: 500px; /* Altura máxima do dropdown quando está aberto */
+}
+
+@media (max-width: 768px) {
+    .container {
+        align-items: center;
+    }
+
+    .content {
+        margin-left: 0;
+        margin-top: 20px;
+    }
+
+    .dropdownButton, .dropdownContent {
+        width: 100%;
+    }
+
+    .cardContainer {
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: start;
+        align-items: start;
+        overflow: auto;
+        width: 300px;
+    }
+
+    .editIcon {
+        left: 0;
+        margin-top: 10px;
+    }
+}
+
+@media (max-width: 480px) {
+
+    .principal {
+        height: 100%;
+        position: relative;
+        top: 200px;
+    }
+
+    .dropdownButton {
+        position: relative;
+        width: 450px; /* Ajuste a largura do dropdownButton para 100% */
+        font-size: 18px;
+    }
+
+    .search{
+        width: 300px;
+    }
+
+    .cardContainer {
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: start;
+        align-items: start;
+        overflow: auto;
+        width: 300px;
+    }
+
+    .dropdownContent {
+        width: 450px;
+    }
+
+    .cardizin {
+        width: 220px;
+        left: 0px;
+    }
+    .imgzinha{
+        width: 200px;
+        height: 150px;
+    }
+    .cardContainer {
+        align-items: center;
+    }
+    .addButton {
+        width: 100%;
+        left: 0;
+
+    }
+
+    .buttonContainer {
+        justify-content: center;
+        position: relative;
+        left: 0;
+    }
+}
+
+@media (max-width: 320px) {
+    .container {
+        margin: 5px;
+    }
+    .dropdownContent{
+        width: 230px;
+    }
+
+    .titulozin{
+        font-size: 20px;
+        text-align: center;
+    }
+
+    .dropdownButton {
+        font-size: 16px;
+        padding: 8px;
+        width: 230px;
+    }
+
+    .cardizin {
+        width: 100%;
+        margin: 5px;
+        padding: 5px;
+    }
+
+    .addButton {
+        width: 100%;
+        left: 0;
+        margin-top: 5px;
+    }
+
+    .buttonContainer {
+        flex-direction: column;
+        align-items: center;
+        margin-top: 8px;
+    }
+
+    .editIcon {
+        left: 0;
+        margin-top: 10px;
+    }
+
+    .search {
+        width: 100%;
+        height: 30px;
+    }
+
+    .search::placeholder {
+        font-size: 12px;
+    }
 }
