--- a/front/src/components/NavBarPerfil.module.css
+++ b/front/src/components/NavBarPerfil.module.css
@@ -63,7 +63,7 @@
     background: #fff;
     top: 0;
     padding: 15px;
-    box-shadow: 0 0 10px 3px #ccc;
+    box-shadow: -3px 7px 8px -2px rgba(0,0,0,0.40);
     transition: all 0.5s;
     width: 250px;
     z-index: 99;
@@ -155,6 +155,12 @@
     height: 25px;
 }
 
+.imgPerfill {
+    width: 150px;
+    height: 150px;
+    border-radius: 70px;
+}
+
 /*PROGRAMA*/
 
 .tituloProgra {
@@ -217,8 +223,64 @@
     font-weight: bold;
 }
 
+@media(max-width: 1441px) {
+    .prograList {
+        height: 300px;
+    }
+}
+
+@media(max-width: 1300px) {
+    .prograList {
+        height: 190px;
+    }
+}
+
+@media(max-width: 1026px) {
+    .prograList {
+        height: 245px;
+    }
+}
+
 @media(max-width: 770px) {
     .prograList {
-        height: 220px;
+        height: 135px;
+    }
+}
+@media (max-width: 480px){
+    .principal{
+    display: none;
+    }
+    .imgLogo {
+         margin-top: 90px;
+         width: 30px;
+         height: auto;
+     }
+    .principalPerfil{
+        display: none;
+    }
+}
+@media(max-width: 426px) {
+    .prograList {
+        height: 135px;
+    }
+
+    .imgPerfill{
+        width: 130px;
+        height: 130px;
+    }
+
+    .principalPerfil{
+        padding: 10px;
+    }
+}
+@media(max-width: 320px) {
+    .logoNav{
+        align-items: center;
+        justify-content: center;
+    }
+    .imgLogo{
+        margin-top: 0;
+        position: relative;
+        right: 8px;
     }
 }
