--- a/front/src/components/CadastroMateria.module.css
+++ b/front/src/components/CadastroMateria.module.css
@@ -96,11 +96,45 @@
     gap: 10px;
 }
 
+.divsDire{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+
 @media (max-width: 768px) {
-    .terceiroBlocoDireita,
-    .segundoBlocoEsquerda,
-    .inputP{
-        display: block;
-        width: 34.5vw;
+    .divdireita{
+        min-font-size: 0;
+        margin-left: 30px;
     }
+}
+
+@media (max-width: 426px) {
+    .divdireita{
+        margin-left: 22px;
+        height: 80vh;
+        width: 63vh;
+    }
+
+    .pessoas{
+        gap: 0;
+    }
+
+    .divsDire{
+        display: flex;
+        flex-direction: column;
+    }
+    .nomessssss{
+        font-size: 12px;
+    }
+
+    .select {
+        width: 80vw;
+    }
+
+    .terceiroBlocoDireita{
+        justify-content: space-between;
+    }
+
+
 }
